project(Linux)
cmake_minimum_required(VERSION 3.0)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pipe -std=c++2a")

if(0)

# gcore_test.cpp
set(gcore_test_SRC gcore_test.cpp)
add_executable(gcore_test ${gcore_test_SRC})


endif(0)

# gcore_test.cpp
set(gcore_test_SRC gcore_test.cpp)
add_executable(gcore_test ${gcore_test_SRC})
